# skip-zip

./: CHANGELOG.md  Package.swift  README.md
.github/workflows/: ci.yml  skiplib.yml
Sources/MiniZip/: CMakeLists.txt
Sources/MiniZip/Skip/: skip.yml
Sources/MiniZip/include/: minizip.h
Sources/MiniZip/src/: mz_compat.h  mz_crypt_apple.c  mz_os.h  mz_strm_wzaes.c
Sources/SkipZip/: MiniZipLibrary.swift  SkipMiniZip.swift  SkipZip.swift  SkipZlib.swift
Sources/SkipZipKt/: SkipZipBundle.swift
Tests/SkipZipKtTests/: SkipZipKtTests.swift
Tests/SkipZipTests/: SkipZipTests.swift  SkipZlibTests.swift  XCSkipTests.swift
